--- a/WebContent/index.zul
+++ b/WebContent/index.zul
@@ -23,7 +23,7 @@
 		style="display: none;">
 	</div>
 	<div apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('karen.core.crux.session.DataCenter')">
+		viewModel="@id('vm') @init('karen.core.crux.session.DataCenter')" style="background-color: #f5f5f5;">
 		<div if="${vm.logued == true}">
 
 			<hlayout id="main" spacing="0">
@@ -33,7 +33,7 @@
 					<div class="shortcuts">
 						<div class="shortcuts-expanded"
 							style="margin-top: 100px;">
-							<image src="/imagenes/logo_fanca.png"
+							<image src="/imagenes/smiles_webdesktop.png"
 								style="max-width:200px; max-height:200px; margin-top: -90px;">
 							</image>
 						</div>
@@ -74,7 +74,7 @@
 					<include src="views/desktop/content/page_header.zul" />
 
 					<!-- Body -->
-					<div>
+					<div style="background-color: #f5f5f5; height: 505px;">
 						<div id="mainContent"
 							sclass="page-content page-content-main">
 							<include src="@load(vm.srcPageContent)"
