--- a/WebContent/index.zul
+++ b/WebContent/index.zul
@@ -23,7 +23,8 @@
 		style="display: none;">
 	</div>
 	<div apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('karen.core.crux.session.DataCenter')" style="background-color: #f5f5f5;">
+		viewModel="@id('vm') @init('karen.core.crux.session.DataCenter')"
+		style="background-color: #f5f5f5;">
 		<div if="${vm.logued == true}">
 
 			<hlayout id="main" spacing="0">
@@ -69,18 +70,29 @@
 				</div>
 				<vlayout id="vlayout" hflex="1" sclass="content-main">
 					<include src="views/desktop/content/navbar.zul" />
-					<include src="views/desktop/content/breadcrumbs.zul" />
+					<include
+						src="views/desktop/content/breadcrumbs.zul" />
 
-					<include src="views/desktop/content/page_header.zul" />
+					<include
+						src="views/desktop/content/page_header.zul" />
 
 					<!-- Body -->
-					<div style="background-color: #f5f5f5; height: 505px;">
+					<div
+						style=" background-color: #f5f5f5;    min-height: 275px;">
 						<div id="mainContent"
 							sclass="page-content page-content-main">
 							<include src="@load(vm.srcPageContent)"
 								animation_="animated slideInDown">
 							</include>
 						</div>
+
+					</div>
+					<div sclass="footer"
+						style="    background: #d2ec3f; text-align: right;">
+						<image
+							style="height: 80px; padding: 4px; margin-right: 16px;"
+							src="imagenes/logo_jarvis_vector_footer.png">
+						</image>
 					</div>
 					<!-- End Body -->
 				</vlayout>
