Modificaciones de favicon

--- a/WebContent/index.zul
+++ b/WebContent/index.zul
@@ -1,4 +1,6 @@
 <?page title="SMILE"?>
+<?link rel="shortcut icon" type="image/x-icon" href="imagenes/favicon2.icoo"?>
+<?link rel="icon" type="image/x-icon" href="imagenes/favicon2.ico"?>
 
 <?meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"?>
 <?link href="assets/third-party-libraries/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css"?>
