--- a/WebContent/main.zul
+++ b/WebContent/main.zul
@@ -1,4 +1,6 @@
 <?page title="FANCA" contentType="text/html;charset=UTF-8"?>
+<?link rel="shortcut icon" type="image/x-icon" href="imagenes/favicon2.icoo"?>
+<?link rel="icon" type="image/x-icon" href="imagenes/favicon2.ico"?>
 <?meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"?>
 
 <?meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"?>
