--- a/WebContent/assets/css/components-jarvis.css
+++ b/WebContent/assets/css/components-jarvis.css
@@ -379,27 +379,108 @@ nav-list.z-navbar>ul>.z-nav-open>a i,.nav-list.z-navbar>ul>.z-nav-open>a span
 	font-family: "Roboto", sans-serif !important;
 	font-size: 1.1em !important;
 	font-weight: normal !important;
-	background: #999999 !important;
+	background: #594E46 !important;
 	padding: 0.2em 0.8em !important;
 	height: 31px;
 }
 
 .z-listfoot {
-	background: #999999;
+	background: #594E46;
 	height: 41px;
 }
 
-.z-listitem.z-listitem-selected>.z-listcell>.z-listcell-content,.z-listitem:HOVER>.z-listcell>.z-listcell-content,.z-treerow-selected>.z-treecell>.z-treecell-content,.z-treerow:HOVER>.z-treecell>.z-treecell-content
+.z-listheader {
+    border: 0px solid transparent !important;
+}
+
+
+.z-listitem.z-listitem-selected > .z-listcell,
+.z-listitem.z-listitem-odd > .z-listcell, 
+.z-listitem.z-listitem > .z-listcell,
+.z-listitem:hover > .z-listcell, .z-treerow-selected > .z-treecell, 
+.z-treerow:hover > .z-treecell {
+
+    border: 0px solid transparent !important;
+}
+
+.z-listitem:hover>.z-listcell>.z-listcell-content,
+.z-treerow:hover>.z-treecell>.z-treecell-content,
+.z-treerow-selected:hover>.z-treecell>.z-treecell-content,
+.z-listitem.z-listitem-selected:hover>.z-listcell>.z-listcell-content
 	{
-	background: #ebf8fd !important;
-	color: #999999 !important;
+	background: #F0F2DC !important;
+	color: #8D7A6F !important;
 	max-height: 42px;
 	overflow: auto;
 }
 
+.z-listitem.z-listitem-selected>.z-listcell>.z-listcell-content,
+.z-treerow-selected>.z-treecell>.z-treecell-content
+	{
+	background: #AFA197 !important;
+	color: #ffffff !important;
+	max-height: 42px;
+	overflow: auto;
+}
+
+.z-listcell-content, .z-listgroup-content, .z-listgroupfoot-content {
+    font-family: "Roboto",sans-serif !important;
+    font-size: 1.1em !important;
+    color: #87796f;
+}
+
+.z-listhead {
+    border-right: 0px solid Transparent !important;
+    border-top: 0px solid Transparent !important;
+    border-left: 0px solid Transparent !important;
+}
+
+.z-listbox-body table {
+    border-right: 0px solid Transparent !important;
+    border-top: 0px solid Transparent !important;
+    border-left: 0px solid Transparent !important;
+}
+.z-listbox-odd.z-listitem, .z-treerow:nth-child(odd) {
+    background-color: #dcd1c9;
+}
+
 .z-listbox {
-	/* border: 1px solid #cfcfcf !important; */
-	border-right: 1px solid #cfcfcf !important;
+    border: 0px solid transparent !important;
+    border-right: 0px solid transparent !important;
+}
+
+.z-button.btn-pagination {
+    width: 30px;
+    height: 30px;
+    border-color: #413125;
+    color: #dcd1c9 !important;
+    margin-right: 3px;
+    text-shadow: unset;
+    box-shadow: unset;
+}
+
+.z-button.btn-listfoot-right {
+    width: 28px;
+    height: 30px;
+    border-color: transparent;
+    margin-right: 5px;
+    text-shadow: unset;
+    box-shadow: unset;
+    color: #dcd1c9 !important;
+    padding-right: 21px;
+    text-align: center;
+}
+
+.z-button.btn-pagination:hover, .z-button.btn-listfoot-right:hover {
+    border-color: #3b85a1;
+    background: #3b85a1;
+    color: white !important;
+}
+
+.pagination-registros {
+    color: #dcd1c9;
+    margin-top: 8px;
+    margin-right: 15px;
 }
 
 .nav-list.z-navbar>ul>.z-nav>ul>li a:hover i,.z-nav-popup>li a:hover i {
