--- a/WebContent/views/desktop/maestro/main/TareaIndex.zul
+++ b/WebContent/views/desktop/maestro/main/TareaIndex.zul
@@ -12,17 +12,19 @@
 						selectedItem="@bind(vm.selectedObject)">
 
 						<listhead sizable="true">
-							<listheader width="50%" label="Nombre" />
-							<listheader width="50%" label="Descripcion" />
+							<listheader width="33%" label="Nombre" />
+							<listheader width="33%" label="Descripcion" />
+							<listheader width="33%" label="Clasificador Tarea" />
 						</listhead>
 						<template name="model">
 							<listitem>
 								<listcell label="@load(each.nombre)" />
 								<listcell label="@load(each.descripcion)" />
+								<listcell label="@load(each.fkClasificadorTarea)" />
 							</listitem>
 						</template>
 						<listfoot>
-							<listfooter id="listFoot" span="2"
+							<listfooter id="listFoot" span="3"
 								use="karen.core.listfoot.ListFoot">
 							</listfooter>
 						</listfoot>
