--- a/WebContent/views/desktop/maestro/view/CargoFormBasic.zul
+++ b/WebContent/views/desktop/maestro/view/CargoFormBasic.zul
@@ -2,7 +2,7 @@
 	<div width="80%" class="container opacity-0"
 		use="karen.core.form.controllers.C_WindowForm"
 		apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.viewmodels.views.VMVUnidadMedida')">
+		viewModel="@id('vm') @init('ve.smile.viewmodels.views.VMVCargo')">
 
 		<div class="row">
 
@@ -10,21 +10,13 @@
 					<div class="input-field col s6">
 						<n:label for="nombre">Nombre</n:label>
 					<textbox id="nombre" type="text"
-						value="@bind(vm.unidadMedida.nombre)">
+						value="@bind(vm.cargo.nombre)">
 					</textbox>
 					</div>
 					<div class="input-field col s6">
 						<n:label for="descripcion">Descripcion</n:label>
 					<textbox id="descripcion" type="text"
-						value="@bind(vm.unidadMedida.descripcion)">
-					</textbox>
-					</div>
-				</div>
-				<div class="col s12">
-					<div class="input-field col s12">
-						<n:label for="abreviatura">Abreviatura</n:label>
-					<textbox id="abreviatura" type="text"
-						value="@bind(vm.unidadMedida.abreviatura)">
+						value="@bind(vm.cargo.descripcion)">
 					</textbox>
 					</div>
 				</div>
