--- a/WebContent/views/desktop/maestro/main/CiudadIndex.zul
+++ b/WebContent/views/desktop/maestro/main/CiudadIndex.zul
@@ -2,7 +2,7 @@
 	<div width="100%" class='opacity-0'
 		use="karen.core.simple_list_principal.controllers.C_WindowSimpleListPrincipal"
 		apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.viewmodels.main.VMPUnidadMedida')">
+		viewModel="@id('vm') @init('ve.smile.viewmodels.main.VMPCiudad')">
 
 		<div class="row">
 			<div class="col s12">
@@ -12,19 +12,17 @@
 						selectedItem="@bind(vm.selectedObject)">
 
 						<listhead sizable="true">
-							<listheader width="33%" label="Nombre" />
-							<listheader width="33%" label="Descripcion" />
-							<listheader width="33%" label="Abreviatura" />
+							<listheader width="50%" label="Estado" />
+							<listheader width="50%" label="Nombre" />
 						</listhead>
 						<template name="model">
 							<listitem>
+								<listcell label="@load(each.fkEstado)" />
 								<listcell label="@load(each.nombre)" />
-								<listcell label="@load(each.descripcion)" />
-								<listcell label="@load(each.abreviatura)" />
 							</listitem>
 						</template>
 						<listfoot>
-							<listfooter id="listFoot" span="3"
+							<listfooter id="listFoot" span="2"
 								use="karen.core.listfoot.ListFoot">
 							</listfooter>
 						</listfoot>
