--- a/WebContent/views/desktop/maestro/main/ClasificadorReconocimientoIndex.zul
+++ b/WebContent/views/desktop/maestro/main/ClasificadorReconocimientoIndex.zul
@@ -2,7 +2,7 @@
 	<div width="100%" class='opacity-0'
 		use="karen.core.simple_list_principal.controllers.C_WindowSimpleListPrincipal"
 		apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.viewmodels.main.VMPUnidadMedida')">
+		viewModel="@id('vm') @init('ve.smile.viewmodels.main.VMPClasificadorReconocimiento')">
 
 		<div class="row">
 			<div class="col s12">
@@ -14,13 +14,13 @@
 						<listhead sizable="true">
 							<listheader width="33%" label="Nombre" />
 							<listheader width="33%" label="Descripcion" />
-							<listheader width="33%" label="Abreviatura" />
+							<listheader width="33%" label="Tipo Reconocimiento" />
 						</listhead>
 						<template name="model">
 							<listitem>
 								<listcell label="@load(each.nombre)" />
 								<listcell label="@load(each.descripcion)" />
-								<listcell label="@load(each.abreviatura)" />
+								<listcell label="@load(each.tipoReconocimiento)" />
 							</listitem>
 						</template>
 						<listfoot>
