--- a/WebContent/views/desktop/maestro/main/IndicadorIndex.zul
+++ b/WebContent/views/desktop/maestro/main/IndicadorIndex.zul
@@ -2,7 +2,7 @@
 	<div width="100%" class='opacity-0'
 		use="karen.core.simple_list_principal.controllers.C_WindowSimpleListPrincipal"
 		apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.viewmodels.main.VMPUnidadMedida')">
+		viewModel="@id('vm') @init('ve.smile.viewmodels.main.VMPIndicador')">
 
 		<div class="row">
 			<div class="col s12">
@@ -12,15 +12,15 @@
 						selectedItem="@bind(vm.selectedObject)">
 
 						<listhead sizable="true">
+							<listheader width="33%" label="Unidad Medida" />
 							<listheader width="33%" label="Nombre" />
 							<listheader width="33%" label="Descripcion" />
-							<listheader width="33%" label="Abreviatura" />
 						</listhead>
 						<template name="model">
 							<listitem>
+								<listcell label="@load(each.fkUnidadMedida)" />
 								<listcell label="@load(each.nombre)" />
 								<listcell label="@load(each.descripcion)" />
-								<listcell label="@load(each.abreviatura)" />
 							</listitem>
 						</template>
 						<listfoot>
