--- a/WebContent/views/desktop/maestro/main/PatrocinadorIndex.zul
+++ b/WebContent/views/desktop/maestro/main/PatrocinadorIndex.zul
@@ -2,7 +2,7 @@
 	<div width="100%" class='opacity-0'
 		use="karen.core.simple_list_principal.controllers.C_WindowSimpleListPrincipal"
 		apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.viewmodels.main.VMPUnidadMedida')">
+		viewModel="@id('vm') @init('ve.smile.viewmodels.main.VMPPatrocinador')">
 
 		<div class="row">
 			<div class="col s12">
@@ -12,15 +12,15 @@
 						selectedItem="@bind(vm.selectedObject)">
 
 						<listhead sizable="true">
-							<listheader width="33%" label="Nombre" />
-							<listheader width="33%" label="Descripcion" />
-							<listheader width="33%" label="Abreviatura" />
+							<listheader width="33%" label="Persona" />
+							<listheader width="33%" label="Fecha Ingreso" />
+							<listheader width="33%" label="Fecha Salida" />
 						</listhead>
 						<template name="model">
 							<listitem>
-								<listcell label="@load(each.nombre)" />
-								<listcell label="@load(each.descripcion)" />
-								<listcell label="@load(each.abreviatura)" />
+								<listcell label="@load(each.fkPersona)" />
+								<listcell label="@load(each.fechaIngreso)" />
+								<listcell label="@load(each.fechaSalida)" />
 							</listitem>
 						</template>
 						<listfoot>
