--- a/WebContent/views/desktop/maestro/main/FortalezaIndex.zul
+++ b/WebContent/views/desktop/maestro/main/FortalezaIndex.zul
@@ -1,5 +1,5 @@
 <zk xmlns:n="native" xmlns:w="client">
-	<div width="100%" class='opacity-0'
+	<div width="100%" class='${arg.animation_}'
 		use="karen.core.simple_list_principal.controllers.C_WindowSimpleListPrincipal"
 		apply="org.zkoss.bind.BindComposer"
 		viewModel="@id('vm') @init('ve.smile.viewmodels.main.VMPFortaleza')">
@@ -13,7 +13,7 @@
 
 						<listhead sizable="true">
 							<listheader width="50%" label="Nombre" />
-							<listheader width="50%" label="Descripcion" />
+							<listheader width="50%" label="Descripción" />
 						</listhead>
 						<template name="model">
 							<listitem>
