--- a/WebContent/views/desktop/maestro/main/PreguntaIndex.zul
+++ b/WebContent/views/desktop/maestro/main/PreguntaIndex.zul
@@ -1,5 +1,5 @@
 <zk xmlns:n="native" xmlns:w="client">
-	<div width="100%" class='opacity-0'
+	<div width="100%" class="${arg.animation_}"
 		use="karen.core.simple_list_principal.controllers.C_WindowSimpleListPrincipal"
 		apply="org.zkoss.bind.BindComposer"
 		viewModel="@id('vm') @init('ve.smile.viewmodels.main.VMPPregunta')">
