--- a/WebContent/views/desktop/maestro/main/UnidadMedidaIndex.zul
+++ b/WebContent/views/desktop/maestro/main/UnidadMedidaIndex.zul
@@ -1,5 +1,5 @@
 <zk xmlns:n="native" xmlns:w="client">
-	<div width="100%" class='opacity-0'
+	<div width="100%" class="${arg.animation_}"
 		use="karen.core.simple_list_principal.controllers.C_WindowSimpleListPrincipal"
 		apply="org.zkoss.bind.BindComposer"
 		viewModel="@id('vm') @init('ve.smile.viewmodels.main.VMPUnidadMedida')">
@@ -7,10 +7,8 @@
 		<div class="row">
 			<div class="col s12">
 				<div class="col s12">
-					<listbox id="listbox"
-						model="@load(vm.objectsList)"
+					<listbox id="listbox" model="@load(vm.objectsList)"
 						selectedItem="@bind(vm.selectedObject)">
-
 						<listhead sizable="true">
 							<listheader width="33%" label="Nombre" />
 							<listheader width="33%" label="Descripcion" />
@@ -19,8 +17,10 @@
 						<template name="model">
 							<listitem>
 								<listcell label="@load(each.nombre)" />
-								<listcell label="@load(each.descripcion)" />
-								<listcell label="@load(each.abreviatura)" />
+								<listcell
+									label="@load(each.descripcion)" />
+								<listcell
+									label="@load(each.abreviatura)" />
 							</listitem>
 						</template>
 						<listfoot>
@@ -33,7 +33,8 @@
 			</div>
 		</div>
 
-		<toolbar id="toolbar" align="center" use="karen.core.toolbar.Toolbar">
+		<toolbar id="toolbar" align="center"
+			use="karen.core.toolbar.Toolbar">
 		</toolbar>
 	</div>
 </zk>
