--- a/WebContent/views/desktop/maestro/view/ActividadFormBasic.zul
+++ b/WebContent/views/desktop/maestro/view/ActividadFormBasic.zul
@@ -1,38 +1,44 @@
 <zk xmlns:n="native" xmlns:w="client">
-	<div width="80%" class="container opacity-0"
+	<div width="80%" class="container ${arg.animation_}"
 		use="karen.core.form.controllers.C_WindowForm"
 		apply="org.zkoss.bind.BindComposer"
 		viewModel="@id('vm') @init('ve.smile.viewmodels.views.VMVActividad')">
 
 		<div class="row">
-
-				<div class="col s12">
-					<div class="input-field col s6">
-						<n:label for="nombre">Nombre</n:label>
+			<div class="col s12">
+				<div class="input-field col s6">
+					<n:label for="nombre">Nombre</n:label>
 					<textbox id="nombre" type="text"
 						value="@bind(vm.actividad.nombre)">
 					</textbox>
-					</div>
-					<div class="input-field col s6">
-						<n:label for="descripcion">Descripcion</n:label>
+				</div>
+
+				<div class="input-field col s12">
+					<n:label class="active"
+						for="fk_clasificador_actividad">
+						Clasificador Actividad
+					</n:label>
+					<combobox id="fk_clasificador_actividad"
+						readonly="true" model="@bind(vm.clasificadorActividads)"
+						selectedItem="@bind(vm.actividad.fkClasificadorActividad)">
+						<template name="model">
+							<comboitem label="@load(each.nombre)" />
+						</template>
+					</combobox>
+				</div>
+
+			</div>
+
+			<div class="col s12">
+				<div class="input-field col s12">
+					<n:label for="descripcion">Descripción</n:label>
 					<textbox id="descripcion" type="text"
 						value="@bind(vm.actividad.descripcion)">
 					</textbox>
-					</div>
 				</div>
-				<div class="col s12">
-					<div class="input-field col s12">
-						<n:label class="active" for="fk_clasificador_actividad">Clasificador Actividad</n:label>
-					<combobox id="fk_clasificador_actividad" readonly="true"
-						>
-						<comboitem label="Choice 1" value="c1" />
-						<comboitem label="Choice 2" value="c2" />
-						<comboitem label="Choice 3" value="c3" />
-					</combobox>
-					</div>
-				</div>
-
+			</div>
 		</div>
+
 		<div id="divButtonsForm"
 			use="karen.core.form.buttons.containers.DivButtonsForm">
 		</div>
