--- a/WebContent/views/desktop/maestro/view/EventoFormBasic.zul
+++ b/WebContent/views/desktop/maestro/view/EventoFormBasic.zul
@@ -1,42 +1,45 @@
 <zk xmlns:n="native" xmlns:w="client">
-	<div width="80%" class="container opacity-0"
+	<div width="80%" class="container ${arg.animation_}"
 		use="karen.core.form.controllers.C_WindowForm"
 		apply="org.zkoss.bind.BindComposer"
 		viewModel="@id('vm') @init('ve.smile.viewmodels.views.VMVEvento')">
 
 		<div class="row">
 
-				<div class="col s12">
-					<div class="input-field col s6">
-						<n:label for="nombre">Nombre</n:label>
+			<div class="col s12">
+				<div class="input-field col s6">
+					<n:label for="nombre">Nombre</n:label>
 					<textbox id="nombre" type="text"
 						value="@bind(vm.evento.nombre)">
 					</textbox>
-					</div>
-					<div class="input-field col s6">
-						<n:label class="active" for="fk_clasificador_evento">Clasificador Evento</n:label>
-					<combobox id="fk_clasificador_evento" readonly="true"
-						>
+				</div>
+				<div class="input-field col s6">
+					<n:label class="active"
+						for="fk_clasificador_evento">
+						Clasificador Evento
+					</n:label>
+					<combobox id="fk_clasificador_evento"
+						readonly="true">
 						<comboitem label="Choice 1" value="c1" />
 						<comboitem label="Choice 2" value="c2" />
 						<comboitem label="Choice 3" value="c3" />
 					</combobox>
-					</div>
 				</div>
-				<div class="col s12">
-					<div class="input-field col s6">
-						<n:label for="descripcion">Descripcion</n:label>
+			</div>
+			<div class="col s12">
+				<div class="input-field col s6">
+					<n:label for="descripcion">Descripcion</n:label>
 					<textbox id="descripcion" type="text"
 						value="@bind(vm.evento.descripcion)">
 					</textbox>
-					</div>
-					<div class="input-field col s6">
-						<n:label for="tipo_evento">Tipo Evento</n:label>
+				</div>
+				<div class="input-field col s6">
+					<n:label for="tipo_evento">Tipo Evento</n:label>
 					<textbox id="tipo_evento" type="text"
 						value="@bind(vm.evento.tipoEvento)">
 					</textbox>
-					</div>
 				</div>
+			</div>
 
 		</div>
 		<div id="divButtonsForm"
