--- a/WebContent/views/desktop/maestro/view/PreguntaFormBasic.zul
+++ b/WebContent/views/desktop/maestro/view/PreguntaFormBasic.zul
@@ -1,25 +1,25 @@
 <zk xmlns:n="native" xmlns:w="client">
-	<div width="80%" class="container opacity-0"
+	<div width="80%" class="container ${arg.animation_}"
 		use="karen.core.form.controllers.C_WindowForm"
 		apply="org.zkoss.bind.BindComposer"
 		viewModel="@id('vm') @init('ve.smile.viewmodels.views.VMVPregunta')">
 
 		<div class="row">
 
-				<div class="col s12">
-					<div class="input-field col s6">
-						<n:label for="pregunta">Pregunta</n:label>
+			<div class="col s12">
+				<div class="input-field col s6">
+					<n:label for="pregunta">Pregunta</n:label>
 					<textbox id="pregunta" type="text"
 						value="@bind(vm.pregunta.pregunta)">
 					</textbox>
-					</div>
-					<div class="input-field col s6">
-						<n:label for="respuesta">Respuesta</n:label>
+				</div>
+				<div class="input-field col s6">
+					<n:label for="respuesta">Respuesta</n:label>
 					<textbox id="respuesta" type="text"
 						value="@bind(vm.pregunta.respuesta)">
 					</textbox>
-					</div>
 				</div>
+			</div>
 
 		</div>
 		<div id="divButtonsForm"
