--- a/WebContent/views/desktop/maestro/view/RequisitoFormBasic.zul
+++ b/WebContent/views/desktop/maestro/view/RequisitoFormBasic.zul
@@ -1,25 +1,25 @@
 <zk xmlns:n="native" xmlns:w="client">
-	<div width="80%" class="container opacity-0"
+	<div width="80%" class="container ${arg.animation_}"
 		use="karen.core.form.controllers.C_WindowForm"
 		apply="org.zkoss.bind.BindComposer"
 		viewModel="@id('vm') @init('ve.smile.viewmodels.views.VMVRequisito')">
 
 		<div class="row">
 
-				<div class="col s12">
-					<div class="input-field col s6">
-						<n:label for="nombre">Nombre</n:label>
+			<div class="col s12">
+				<div class="input-field col s6">
+					<n:label for="nombre">Nombre</n:label>
 					<textbox id="nombre" type="text"
 						value="@bind(vm.requisito.nombre)">
 					</textbox>
-					</div>
-					<div class="input-field col s6">
-						<n:label for="descripcion">Descripcion</n:label>
+				</div>
+				<div class="input-field col s6">
+					<n:label for="descripcion">Descripción</n:label>
 					<textbox id="descripcion" type="text"
 						value="@bind(vm.requisito.descripcion)">
 					</textbox>
-					</div>
 				</div>
+			</div>
 
 		</div>
 		<div id="divButtonsForm"
