--- a/WebContent/views/desktop/maestro/view/TrabajoSocialFormBasic.zul
+++ b/WebContent/views/desktop/maestro/view/TrabajoSocialFormBasic.zul
@@ -1,37 +1,38 @@
 <zk xmlns:n="native" xmlns:w="client">
-	<div width="80%" class="container opacity-0"
+	<div width="80%" class="container ${arg.animation_}"
 		use="karen.core.form.controllers.C_WindowForm"
 		apply="org.zkoss.bind.BindComposer"
 		viewModel="@id('vm') @init('ve.smile.viewmodels.views.VMVTrabajoSocial')">
 
 		<div class="row">
-
-				<div class="col s12">
-					<div class="input-field col s6">
-						<n:label class="active" for="fk_clasificador_trabajo_social">Clasificador Trabajo Social</n:label>
-					<combobox id="fk_clasificador_trabajo_social" readonly="true"
-						>
+			<div class="col s12">
+				<div class="input-field col s6">
+					<n:label class="active"
+						for="fk_clasificador_trabajo_social">
+						Clasificador Trabajo Social
+					</n:label>
+					<combobox id="fk_clasificador_trabajo_social"
+						readonly="true">
 						<comboitem label="Choice 1" value="c1" />
 						<comboitem label="Choice 2" value="c2" />
 						<comboitem label="Choice 3" value="c3" />
 					</combobox>
-					</div>
-					<div class="input-field col s6">
-						<n:label for="nombre">Nombre</n:label>
+				</div>
+				<div class="input-field col s6">
+					<n:label for="nombre">Nombre</n:label>
 					<textbox id="nombre" type="text"
 						value="@bind(vm.trabajoSocial.nombre)">
 					</textbox>
-					</div>
 				</div>
-				<div class="col s12">
-					<div class="input-field col s12">
-						<n:label for="descripcion">Descripcion</n:label>
+			</div>
+			<div class="col s12">
+				<div class="input-field col s12">
+					<n:label for="descripcion">Descripcion</n:label>
 					<textbox id="descripcion" type="text"
 						value="@bind(vm.trabajoSocial.descripcion)">
 					</textbox>
-					</div>
 				</div>
-
+			</div>
 		</div>
 		<div id="divButtonsForm"
 			use="karen.core.form.buttons.containers.DivButtonsForm">
