--- a/WebContent/views/desktop/maestro/view/UnidadMedidaFormBasic.zul
+++ b/WebContent/views/desktop/maestro/view/UnidadMedidaFormBasic.zul
@@ -1,34 +1,32 @@
 <zk xmlns:n="native" xmlns:w="client">
-	<div width="80%" class="container opacity-0"
+	<div width="80%" class="container ${arg.animation_}"
 		use="karen.core.form.controllers.C_WindowForm"
 		apply="org.zkoss.bind.BindComposer"
 		viewModel="@id('vm') @init('ve.smile.viewmodels.views.VMVUnidadMedida')">
-
 		<div class="row">
-
-				<div class="col s12">
-					<div class="input-field col s6">
-						<n:label for="nombre">Nombre</n:label>
+			<div class="col s12">
+				<div class="input-field col s6">
+					<n:label for="nombre">Nombre</n:label>
 					<textbox id="nombre" type="text"
 						value="@bind(vm.unidadMedida.nombre)">
 					</textbox>
-					</div>
-					<div class="input-field col s6">
-						<n:label for="descripcion">Descripcion</n:label>
-					<textbox id="descripcion" type="text"
-						value="@bind(vm.unidadMedida.descripcion)">
-					</textbox>
-					</div>
 				</div>
-				<div class="col s12">
-					<div class="input-field col s12">
-						<n:label for="abreviatura">Abreviatura</n:label>
+				<div class="input-field col s6">
+					<n:label for="abreviatura">Abreviatura</n:label>
 					<textbox id="abreviatura" type="text"
 						value="@bind(vm.unidadMedida.abreviatura)">
 					</textbox>
-					</div>
 				</div>
-
+			</div>
+			<div class="col s12">
+				<div class="input-field col s12">
+					<n:label for="descripcion">Descripción</n:label>
+					<textbox id="descripcion" type="text"
+						multiline="true" sclass="materialize-textarea"
+						value="@bind(vm.unidadMedida.descripcion)">
+					</textbox>
+				</div>
+			</div>
 		</div>
 		<div id="divButtonsForm"
 			use="karen.core.form.buttons.containers.DivButtonsForm">
