--- a/WebContent/assets/css/web/main.css
+++ b/WebContent/assets/css/web/main.css
@@ -367,32 +367,75 @@ To move navigation buttons outside use these settings:
 	margin-left: -15%;
 }
 
-/* estilos para seccion comunidad */
-#comunidad .comunidad .row {
+/* estilos para seccion patrocinadores */
+#patrocinadores .patrocinadores .row {
 	margin-bottom: 0;
 }
 
-#comunidad .comunidad h4 {
+#patrocinadores .patrocinadores h4 {
 	background: #87796f;
 	color: #ffffff;
 	margin: 0;
 	padding: 15px 0;
 }
 
-.medallas {
-	margin-top: 15px;
+#patrocinadores .slider-patrocionadores {
+	padding: 50px;
 }
 
-#comunidad .medallas .fotos {
-	position: relative;
+#owlPatrocinadores .item {
+	padding: 25px 120px 25px 10px;
+	margin: 5px;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	text-align: justify;
 }
 
-#comunidad .medallas .fotos img:nth-of-type(1) {
+#patrocinadores #owlPatrocinadores .item:hover {
+	cursor: pointer;
+}
+
+#patrocinadores #owlPatrocinadores .item .title {
+	color: #f26b7a;
+	font-weight: bold;
+}
+
+#owlPatrocinadores .owl-theme .owl-controls .owl-buttons div {
+	padding: 5px 40px;
+}
+
+#owlPatrocinadores .owl-theme .owl-buttons span {
+	margin-top: 2px;
+}
+
+//
+To move navigation buttons outside use these settings:
+	 
+#owlPatrocinadores .owl-theme .owl-controls .owl-buttons div {
 	position: absolute;
-	width: 100px;
-	height: 100px;
-	top: 35px;
-	left: 59px;
+}
+
+#owlPatrocinadores.owl-theme .owl-controls .owl-buttons .owl-prev {
+	left: -50px;
+	top: 60px;
+	position: absolute;
+}
+
+#owlPatrocinadores.owl-theme .owl-controls .owl-buttons .owl-next {
+	right: -1px;
+	top: 60px;
+	position: absolute;
+}
+
+#owlPatrocinadores.owl-carousel {
+	display: none;
+	position: relative;
+	-ms-touch-action: pan-y;
+}
+
+#owlPatrocinadores .owl-controls .owl-pagination {
+	margin-left: -30px;
 }
 
 .timeline-Header-title {
@@ -412,7 +455,7 @@ To move navigation buttons outside use these settings:
 	word-wrap: break-word;
 }
 
-.comunidad_galeria {
+.patrocinadores_galeria {
 	margin-bottom: 0;
 	padding-bottom: 10px;
 	background: url("/SmileWebApp/imagenes/portal/fondo-body2.png");
