--- a/WebContent/views/desktop/maestro/view/ClasificadorEventoFormBasic.zul
+++ b/WebContent/views/desktop/maestro/view/ClasificadorEventoFormBasic.zul
@@ -15,9 +15,9 @@
 				</div>
 				<div class="input-field col s6">
 					<n:label for="color">Color</n:label>
-					<textbox id="color" type="text"
+					<colorbox id="color"
 						value="@bind(vm.clasificadorEvento.color)">
-					</textbox>
+					</colorbox>
 				</div>
 			</div>
 
