--- a/WebContent/views/desktop/maestro/view/CiudadFormBasic.zul
+++ b/WebContent/views/desktop/maestro/view/CiudadFormBasic.zul
@@ -1,28 +1,34 @@
 <zk xmlns:n="native" xmlns:w="client">
-	<div width="80%" class="container opacity-0"
+	<div width="80%" class="container ${arg.animation_}"
 		use="karen.core.form.controllers.C_WindowForm"
 		apply="org.zkoss.bind.BindComposer"
 		viewModel="@id('vm') @init('ve.smile.viewmodels.views.VMVCiudad')">
 
 		<div class="row">
 
-				<div class="col s12">
-					<div class="input-field col s6">
-						<n:label class="active" for="fk_estado">Estado</n:label>
-					<combobox id="fk_estado" readonly="true"
-						>
-						<comboitem label="Choice 1" value="c1" />
-						<comboitem label="Choice 2" value="c2" />
-						<comboitem label="Choice 3" value="c3" />
-					</combobox>
-					</div>
-					<div class="input-field col s6">
-						<n:label for="nombre">Nombre</n:label>
+			<div class="col s12">
+				<div class="input-field col s6">
+					<n:label for="nombre">Nombre</n:label>
 					<textbox id="nombre" type="text"
 						value="@bind(vm.ciudad.nombre)">
 					</textbox>
-					</div>
 				</div>
+			</div>
+
+			<div class="col s12">
+				<div class="input-field col s8">
+					<n:label class="active" for="fk_estado">
+						Estado
+					</n:label>
+					<combobox id="fk_estado" readonly="true"
+						model="@bind(vm.estados)"
+						selectedItem="@bind(vm.ciudad.fkEstado)">
+						<template name="model">
+							<comboitem label="@load(each.nombre)" />
+						</template>
+					</combobox>
+				</div>
+			</div>
 
 		</div>
 		<div id="divButtonsForm"
