--- a/WebContent/views/desktop/maestro/view/ClasificadorActividadFormBasic.zul
+++ b/WebContent/views/desktop/maestro/view/ClasificadorActividadFormBasic.zul
@@ -6,14 +6,14 @@
 
 		<div class="row">
 
-				<div class="col s12">
-					<div class="input-field col s12">
-						<n:label for="nombre">Nombre</n:label>
+			<div class="col s12">
+				<div class="offset-s2 input-field col s8">
+					<n:label for="nombre">Nombre</n:label>
 					<textbox id="nombre" type="text"
 						value="@bind(vm.clasificadorActividad.nombre)">
 					</textbox>
-					</div>
 				</div>
+			</div>
 
 		</div>
 		<div id="divButtonsForm"
