--- a/WebContent/views/desktop/maestro/view/CapacitacionFormBasic.zul
+++ b/WebContent/views/desktop/maestro/view/CapacitacionFormBasic.zul
@@ -6,31 +6,40 @@
 
 		<div class="row">
 
-				<div class="col s12">
-					<div class="input-field col s6">
-						<n:label for="nombre">Nombre</n:label>
-					<textbox id="nombre" type="text"
+			<div class="col s12">
+				<div class="offset-s2 input-field col s8">
+					<n:label for="nombre">Nombre</n:label>
+					<textbox id="nombre" type="text" maxlength="100"
 						value="@bind(vm.capacitacion.nombre)">
 					</textbox>
-					</div>
-					<div class="input-field col s6">
-						<n:label for="descripcion">Descripcion</n:label>
-						<textbox id="descripcion" type="text"
-						value="@bind(vm.capacitacion.descripcion)">
-						</textbox>
-					</div>
 				</div>
-				<div class="col s12">
-					<div class="input-field col s12">
-						<n:label class="active" for="fk_clasificador_capacitacion">Clasificador Capacitacion</n:label>
-					<combobox id="fk_clasificador_capacitacion" readonly="true"
-						>
-						<comboitem label="Choice 1" value="c1" />
-						<comboitem label="Choice 2" value="c2" />
-						<comboitem label="Choice 3" value="c3" />
+			</div>
+
+			<div class="col s12">
+				<div class="input-field offset-s2 col s8">
+					<n:label class="active"
+						for="fk_clasificador_capacitacion">
+						Clasificador Capacitación
+					</n:label>
+					<combobox id="fk_clasificador_capacitacion"
+						readonly="true" model="@bind(vm.clasificadorCapacitacions)"
+						selectedItem="@bind(vm.capacitacion.fkClasificadorCapacitacion)">
+						<template name="model">
+							<comboitem label="@load(each.nombre)" />
+						</template>
 					</combobox>
-					</div>
 				</div>
+			</div>
+
+			<div sclass="col s12">
+				<div class="input-field offset-s2 col s8">
+					<n:label for="descripcion">Descripción</n:label>
+					<textbox id="descripcion" type="text" maxlength="250"
+						sclass="materialize-textarea" multiline="true"
+						value="@bind(vm.capacitacion.descripcion)">
+					</textbox>
+				</div>
+			</div>
 
 		</div>
 		<div id="divButtonsForm"
