--- a/WebContent/views/desktop/maestro/main/CapacitacionIndex.zul
+++ b/WebContent/views/desktop/maestro/main/CapacitacionIndex.zul
@@ -7,20 +7,22 @@
 		<div class="row">
 			<div class="col s12">
 				<div class="col s12">
-					<listbox id="listbox"
-						model="@load(vm.objectsList)"
+					<listbox id="listbox" model="@load(vm.objectsList)"
 						selectedItem="@bind(vm.selectedObject)">
 
 						<listhead sizable="true">
 							<listheader width="33%" label="Nombre" />
 							<listheader width="33%" label="Descripción" />
-							<listheader width="33%" label="Clasificador Capacitacion" />
+							<listheader width="33%"
+								label="Clasificador Capacitacion" />
 						</listhead>
 						<template name="model">
 							<listitem>
 								<listcell label="@load(each.nombre)" />
-								<listcell label="@load(each.descripcion)" />
-								<listcell label="@load(each.fkClasificadorCapacitacion)" />
+								<listcell
+									label="@load(each.descripcion)" />
+								<listcell
+									label="@load(each.fkClasificadorCapacitacion.nombre)" />
 							</listitem>
 						</template>
 						<listfoot>
@@ -33,7 +35,8 @@
 			</div>
 		</div>
 
-		<toolbar id="toolbar" align="center" use="karen.core.toolbar.Toolbar">
+		<toolbar id="toolbar" align="center"
+			use="karen.core.toolbar.Toolbar">
 		</toolbar>
 	</div>
 </zk>
