--- a/WebContent/views/desktop/maestro/main/ClasificadorEventoIndex.zul
+++ b/WebContent/views/desktop/maestro/main/ClasificadorEventoIndex.zul
@@ -1,4 +1,11 @@
 <zk xmlns:n="native" xmlns:w="client">
+	<style>
+
+		.circle-color-event{ height: 20px; width: 20px; border-radius:
+		100%; display: inline-block; vertical-align: middle; border: 1px
+		solid; 
+		}
+	</style>
 	<div width="100%" class="${arg.animation_}"
 		use="karen.core.simple_list_principal.controllers.C_WindowSimpleListPrincipal"
 		apply="org.zkoss.bind.BindComposer"
@@ -17,7 +24,14 @@
 						<template name="model">
 							<listitem>
 								<listcell label="@load(each.nombre)" />
-								<listcell label="@load(each.color)" />
+								<listcell>
+									<div sclass="circle-color-event"
+										style="@load('background:'.concat(each.color))">
+									</div>
+									<label
+										value="@load('  '.concat(each.color))">
+									</label>
+								</listcell>
 							</listitem>
 						</template>
 						<listfoot>
