--- a/WebContent/views/desktop/maestro/view/AyudaFormBasic.zul
+++ b/WebContent/views/desktop/maestro/view/AyudaFormBasic.zul
@@ -3,24 +3,25 @@
 		use="karen.core.form.controllers.C_WindowForm"
 		apply="org.zkoss.bind.BindComposer"
 		viewModel="@id('vm') @init('ve.smile.viewmodels.views.VMVAyuda')">
-
 		<div class="row">
-
-				<div class="col s12">
-					<div class="input-field col s6">
-						<n:label for="nombre">Nombre</n:label>
-					<textbox id="nombre" type="text"
+			<div class="col s12">
+				<div class="input-field offset-s2 col s8">
+					<n:label for="nombre">Nombre</n:label>
+					<textbox id="nombre" type="text" maxlength="100"
 						value="@bind(vm.ayuda.nombre)">
 					</textbox>
-					</div>
-					<div class="input-field col s6">
-						<n:label for="descripcion">Descripcion</n:label>
-						<textbox id="descripcion" type="text"
-						value="@bind(vm.ayuda.descripcion)">
-					</textbox>
-					</div>
 				</div>
 
+			</div>
+			<div class="col s12">
+				<div class="input-field offset-s2 col s8">
+					<n:label for="descripcion">Descripción</n:label>
+					<textbox id="descripcion" type="text"
+						maxlength="250" sclass="materialize-textarea" multiline="true"
+						value="@bind(vm.ayuda.descripcion)">
+					</textbox>
+				</div>
+			</div>
 		</div>
 		<div id="divButtonsForm"
 			use="karen.core.form.buttons.containers.DivButtonsForm">
