--- a/WebContent/views/desktop/maestro/view/CargoFormBasic.zul
+++ b/WebContent/views/desktop/maestro/view/CargoFormBasic.zul
@@ -7,19 +7,19 @@
 		<div class="row">
 
 			<div class="col s12">
-				<div class="input-field col s6">
+				<div class="input-field offset-s2 col s8">
 					<n:label for="nombre">Nombre</n:label>
-					<textbox id="nombre" type="text"
+					<textbox id="nombre" type="text" maxlength="100"
 						value="@bind(vm.cargo.nombre)">
 					</textbox>
 				</div>
 			</div>
 
 			<div sclass="col s12">
-				<div class="input-field col s12">
+				<div class="input-field offset-s2 col s8">
 					<n:label for="descripcion">Descripción</n:label>
 					<textbox id="descripcion" type="text"
-						multiline="true" sclass="materialize-textarea"
+						maxlength="250" multiline="true" sclass="materialize-textarea"
 						value="@bind(vm.cargo.descripcion)">
 					</textbox>
 				</div>
