--- a/WebContent/views/desktop/maestro/view/CiudadFormBasic.zul
+++ b/WebContent/views/desktop/maestro/view/CiudadFormBasic.zul
@@ -7,16 +7,16 @@
 		<div class="row">
 
 			<div class="col s12">
-				<div class="input-field col s6">
+				<div class="input-field offset-s2 col s8">
 					<n:label for="nombre">Nombre</n:label>
-					<textbox id="nombre" type="text"
+					<textbox id="nombre" type="text" maxlength="100"
 						value="@bind(vm.ciudad.nombre)">
 					</textbox>
 				</div>
 			</div>
 
 			<div class="col s12">
-				<div class="input-field col s8">
+				<div class="input-field offset-s2 col s8">
 					<n:label class="active" for="fk_estado">
 						Estado
 					</n:label>
