--- a/WebContent/views/desktop/maestro/view/ClasificadorActividadFormBasic.zul
+++ b/WebContent/views/desktop/maestro/view/ClasificadorActividadFormBasic.zul
@@ -9,7 +9,7 @@
 			<div class="col s12">
 				<div class="offset-s2 input-field col s8">
 					<n:label for="nombre">Nombre</n:label>
-					<textbox id="nombre" type="text"
+					<textbox id="nombre" type="text" maxlength="100"
 						value="@bind(vm.clasificadorActividad.nombre)">
 					</textbox>
 				</div>
