--- a/WebContent/views/desktop/maestro/view/ClasificadorCapacitacionFormBasic.zul
+++ b/WebContent/views/desktop/maestro/view/ClasificadorCapacitacionFormBasic.zul
@@ -6,7 +6,7 @@
 
 		<div class="row">
 			<div class="col s12">
-				<div class="input-field col s12">
+				<div class="input-field offset-s2 col s8">
 					<n:label for="nombre">Nombre</n:label>
 					<textbox id="nombre" type="text"
 						value="@bind(vm.clasificadorCapacitacion.nombre)">
