--- a/WebContent/views/desktop/maestro/view/ClasificadorMotivoFormBasic.zul
+++ b/WebContent/views/desktop/maestro/view/ClasificadorMotivoFormBasic.zul
@@ -6,14 +6,14 @@
 
 		<div class="row">
 
-				<div class="col s12">
-					<div class="input-field col s12">
-						<n:label for="nombre">Nombre</n:label>
-					<textbox id="nombre" type="text"
+			<div class="col s12">
+				<div class="input-field offset-s2 col s8">
+					<n:label for="nombre">Nombre</n:label>
+					<textbox id="nombre" type="text" maxlength="100"
 						value="@bind(vm.clasificadorMotivo.nombre)">
 					</textbox>
-					</div>
 				</div>
+			</div>
 
 		</div>
 		<div id="divButtonsForm"
