--- a/WebContent/views/desktop/maestro/view/ClasificadorPreguntaFormBasic.zul
+++ b/WebContent/views/desktop/maestro/view/ClasificadorPreguntaFormBasic.zul
@@ -5,17 +5,16 @@
 		viewModel="@id('vm') @init('ve.smile.viewmodels.views.VMVClasificadorPregunta')">
 
 		<div class="row">
-
 			<div class="col s12">
-				<div class="input-field col s12">
+				<div class="input-field offset-s2 col s8">
 					<n:label for="nombre">Nombre</n:label>
-					<textbox id="nombre" type="text"
+					<textbox id="nombre" type="text" maxlength="100"
 						value="@bind(vm.clasificadorPregunta.nombre)">
 					</textbox>
 				</div>
 			</div>
-
 		</div>
+
 		<div id="divButtonsForm"
 			use="karen.core.form.buttons.containers.DivButtonsForm">
 		</div>
