--- a/WebContent/views/desktop/maestro/view/ParticipacionFormBasic.zul
+++ b/WebContent/views/desktop/maestro/view/ParticipacionFormBasic.zul
@@ -26,8 +26,9 @@
 			</div>
 			<div class="col s12">
 				<div class="input-field col s12">
-					<n:label for="descripcion">Descripcion</n:label>
+					<n:label for="descripcion">Descripción</n:label>
 					<textbox id="descripcion" type="text"
+						multiline="true" rows="3" sclass="materialize-textarea"
 						value="@bind(vm.participacion.descripcion)">
 					</textbox>
 				</div>
