--- a/WebContent/views/desktop/maestro/view/PreguntaFormBasic.zul
+++ b/WebContent/views/desktop/maestro/view/PreguntaFormBasic.zul
@@ -3,9 +3,7 @@
 		use="karen.core.form.controllers.C_WindowForm"
 		apply="org.zkoss.bind.BindComposer"
 		viewModel="@id('vm') @init('ve.smile.viewmodels.views.VMVPregunta')">
-
 		<div class="row">
-
 			<div class="col s12">
 				<div class="input-field col s6">
 					<n:label for="pregunta">Pregunta</n:label>
@@ -13,14 +11,17 @@
 						value="@bind(vm.pregunta.pregunta)">
 					</textbox>
 				</div>
+
+			</div>
+			<div sclass="col s12">
 				<div class="input-field col s6">
 					<n:label for="respuesta">Respuesta</n:label>
-					<textbox id="respuesta" type="text"
+					<textbox id="respuesta" type="text" multiline="true"
+						sclass="materialize-textarea"
 						value="@bind(vm.pregunta.respuesta)">
 					</textbox>
 				</div>
 			</div>
-
 		</div>
 		<div id="divButtonsForm"
 			use="karen.core.form.buttons.containers.DivButtonsForm">
