subida de maestros
maestros faltantes (problemas de enum,etc...)

-maestros generales
     -patrocinador
     -directorio

         -clasificadores
             -reconocimientos

-eventos
   -tareas

--- a/WebContent/views/desktop/maestro/main/CapacitacionIndex.zul
+++ b/WebContent/views/desktop/maestro/main/CapacitacionIndex.zul
@@ -14,7 +14,7 @@
 							<listheader width="33%" label="Nombre" />
 							<listheader width="33%" label="Descripción" />
 							<listheader width="33%"
-								label="Clasificador Capacitacion" />
+								label="Clasificador de Capacitacion" />
 						</listhead>
 						<template name="model">
 							<listitem>
