--- a/WebContent/views/desktop/maestro/main/IndicadorIndex.zul
+++ b/WebContent/views/desktop/maestro/main/IndicadorIndex.zul
@@ -12,15 +12,17 @@
 						selectedItem="@bind(vm.selectedObject)">
 
 						<listhead sizable="true">
-							<listheader width="33%" label="Unidad Medida" />
+							
 							<listheader width="33%" label="Nombre" />
 							<listheader width="33%" label="Descripcion" />
+							<listheader width="33%" label="Unidad de Medida" />
 						</listhead>
 						<template name="model">
 							<listitem>
-								<listcell label="@load(each.fkUnidadMedida)" />
+								
 								<listcell label="@load(each.nombre)" />
 								<listcell label="@load(each.descripcion)" />
+								<listcell label="@load(each.fkUnidadMedida.nombre)" />
 							</listitem>
 						</template>
 						<listfoot>
