--- a/WebContent/views/desktop/maestro/view/EstadoFormBasic.zul
+++ b/WebContent/views/desktop/maestro/view/EstadoFormBasic.zul
@@ -8,7 +8,7 @@
 			<div class="col s12">
 				<div class="offset-s2 input-field col s8">
 					<n:label for="nombre">Nombre</n:label>
-					<textbox id="nombre" type="text"
+					<textbox id="nombre" type="text" maxlength="100"
 						value="@bind(vm.estado.nombre)">
 					</textbox>
 				</div>
