--- a/WebContent/views/desktop/maestro/view/EtiquetaFormBasic.zul
+++ b/WebContent/views/desktop/maestro/view/EtiquetaFormBasic.zul
@@ -7,9 +7,9 @@
 		<div class="row">
 
 			<div class="col s12">
-				<div class="input-field col s12">
+				<div class="input-field offset-s2 col s8">
 					<n:label for="nombre">Nombre</n:label>
-					<textbox id="nombre" type="text"
+					<textbox id="nombre" type="text" maxlength="100"
 						value="@bind(vm.etiqueta.nombre)">
 					</textbox>
 				</div>
