--- a/WebContent/views/desktop/maestro/view/IndicadorFormBasic.zul
+++ b/WebContent/views/desktop/maestro/view/IndicadorFormBasic.zul
@@ -1,4 +1,29 @@
 <zk xmlns:n="native" xmlns:w="client">
+<style>
+		.z-comboitem-selected { background: #AFA197 !important; color:
+		#ffffff !important; } 
+		.z-comboitem:hover,
+		.z-comboitem-selected:hover { 
+		background: #F0F2DC !important;
+		color: #8D7A6F !important; } 
+		
+		.z-comboitem-selected:hover
+		.z-comboitem-text { color: #8D7A6F !important; }
+
+		.z-comboitem-selected .z-comboitem-text { color: #ffffff
+		!important; }
+
+		.z-comboitem { text-shadow: none !important; }
+
+		.page-content-main textarea.materialize-textarea { max-height:
+		100px; }
+		
+		.page-content-main textarea.materialize-textarea:hover, 
+		.page-content-main textarea.materialize-textarea:active,
+		.page-content-main textarea.materialize-textarea:focus{
+			overflow-y: auto; 
+		}
+	</style>
 	<div width="80%" class="container ${arg.animation_}"
 		use="karen.core.form.controllers.C_WindowForm"
 		apply="org.zkoss.bind.BindComposer"
@@ -6,18 +31,20 @@
 
 		<div class="row">
 
+			
 			<div class="col s12">
-
-				<div class="input-field col s6">
+				<div class="input-field offset-s2 col s8">
 					<n:label for="nombre">Nombre</n:label>
-					<textbox id="nombre" type="text"
+					<textbox id="nombre" type="text" maxlength="100"
 						value="@bind(vm.indicador.nombre)">
 					</textbox>
 				</div>
-
-				<div class="input-field col s6">
+			</div>
+			
+			<div sclass="col s12">
+				<div class="input-field offset-s2 col s8">
 					<n:label class="active" for="fk_unidad_medida">
-						Unidad Medida
+						Unidad de Medida
 					</n:label>
 					<combobox id="fk_unidad_medida" readonly="true"
 						model="@bind(vm.unidadMedidas)"
@@ -29,11 +56,12 @@
 					</combobox>
 				</div>
 			</div>
+			
 			<div class="col s12">
-				<div class="input-field col s12">
+				<div class="input-field offset-s2 col s8">
 					<n:label for="descripcion">Descripción</n:label>
-					<textbox id="descripcion" type="text"
-						multiline="true" sclass="materialize-textarea"
+					<textbox id="descripcion" type="text" maxlength="250"
+						sclass="materialize-textarea" multiline="true"
 						value="@bind(vm.indicador.descripcion)">
 					</textbox>
 				</div>
