--- a/WebContent/views/desktop/maestro/view/ProfesionFormBasic.zul
+++ b/WebContent/views/desktop/maestro/view/ProfesionFormBasic.zul
@@ -5,22 +5,27 @@
 		viewModel="@id('vm') @init('ve.smile.viewmodels.views.VMVProfesion')">
 
 		<div class="row">
-
-			<div class="col s12">
-				<div class="input-field col s6">
+		
+		<div class="col s12">
+				<div class="input-field offset-s2 col s8">
 					<n:label for="nombre">Nombre</n:label>
-					<textbox id="nombre" type="text"
+					<textbox id="nombre" type="text" maxlength="100"
 						value="@bind(vm.profesion.nombre)">
 					</textbox>
 				</div>
-				<div class="input-field col s12">
+			</div>
+			
+			<div class="col s12">
+				<div class="input-field offset-s2 col s8">
 					<n:label for="descripcion">Descripción</n:label>
-					<textbox id="descripcion" type="text"
-						multiline="true" sclass="materialize-textarea"
+					<textbox id="descripcion" type="text" maxlength="250"
+						sclass="materialize-textarea" multiline="true"
 						value="@bind(vm.profesion.descripcion)">
 					</textbox>
 				</div>
 			</div>
+
+			
 
 		</div>
 		<div id="divButtonsForm"
