--- a/WebContent/views/desktop/maestro/view/TareaFormBasic.zul
+++ b/WebContent/views/desktop/maestro/view/TareaFormBasic.zul
@@ -5,35 +5,44 @@
 		viewModel="@id('vm') @init('ve.smile.viewmodels.views.VMVTarea')">
 
 		<div class="row">
-
-			<div class="col s12">
-				<div class="input-field col s6">
+		
+		<div class="col s12">
+				<div class="input-field offset-s2 col s8">
 					<n:label for="nombre">Nombre</n:label>
-					<textbox id="nombre" type="text"
+					<textbox id="nombre" type="text" maxlength="100"
 						value="@bind(vm.tarea.nombre)">
 					</textbox>
 				</div>
-				<div class="input-field col s6">
-					<n:label for="descripcion">Descripcion</n:label>
-					<textbox id="descripcion" type="text"
+			</div>
+
+			<div sclass="col s12">
+				<div class="input-field offset-s2 col s8">
+					<n:label class="active"
+						for="fk_clasificador_tarea">
+						Clasificador de Tarea
+					</n:label>
+					<combobox id="fk_clasificador_tarea"
+						readonly="true" model="@bind(vm.clasificadorTareas)"
+						selectedItem="@bind(vm.tarea.fkClasificadorTarea)">
+						<template name="model">
+							<comboitem label="@load(each.nombre)" />
+						</template>
+					</combobox>
+				</div>
+			</div>
+
+			<div class="col s12">
+				<div class="input-field offset-s2 col s8">
+					<n:label for="descripcion">Descripción</n:label>
+					<textbox id="descripcion" type="text" maxlength="250"
+						sclass="materialize-textarea" multiline="true"
 						value="@bind(vm.tarea.descripcion)">
 					</textbox>
 				</div>
 			</div>
-			<div class="col s12">
-				<div class="input-field col s12">
-					<n:label class="active"
-						for="fk_clasificador_tarea">
-						Clasificador Tarea
-					</n:label>
-					<combobox id="fk_clasificador_tarea"
-						readonly="true">
-						<comboitem label="Choice 1" value="c1" />
-						<comboitem label="Choice 2" value="c2" />
-						<comboitem label="Choice 3" value="c3" />
-					</combobox>
-				</div>
-			</div>
+		</div>
+
+			
 
 		</div>
 		<div id="divButtonsForm"
